# world-loop

./: .gitattributes  LICENSE  README.md  ROADMAP.md  pyproject.toml  run.sh
benchmarks/planning/: simple_mars_habitat.json
cli/: plot_runs.py  run_experiment.py
examples/: seed_complex.json
rust/extensions/: Cargo.toml
rust/extensions/src/: lib.rs
visualizations/: evolution.py
visualizations/dashboard/: package.json
world_loop/: genome.py  population.py
world_loop/agents/: base.py  roles.py
world_loop/benchmarks/: base.py  registry.py
world_loop/benchmarks/tasks/: arithmetic.py  mars_habitat.py
world_loop/core/: engine.py  seed.py
world_loop/eval/: evaluator.py
world_loop/llm/: provider.py
world_loop/memory/: inmemory.py
world_loop/metrics/: tracker.py
world_loop/museum/: archive.py
world_loop/mutate/: mutator.py
